fix(front): modal window z-index;

--- a/dataans/public/css/modal.css
+++ b/dataans/public/css/modal.css
@@ -9,4 +9,5 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(0.3, 0.3, 0.3, 0.7);
+    z-index: 999999;
 }
